--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 </head>
 <body>
     <div>
+        <div id="loading-screen">
+            <div class="loading-snake">
+                <div class="snake-segment"></div>
+                <div class="snake-segment"></div>
+                <div class="snake-segment"></div>
+                <div class="snake-segment"></div>
+                <div class="snake-segment"></div>
+            </div>
+            <h2>Loading...</h2>
+        </div> 
         <div class="scores">
             <h1 id="score">000</h1>
             <h1 id="highScore">000</h1>
